# Opticon

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  __main__.py  app.py  external_deps.bzl  gazelle_python.yaml  pylintrc  requirements.in  requirements.txt  setup_deps.bzl
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  enhancement.yaml
.github/workflows/: pr_lint.yml  prlint.yml  yapf.yml
alembic/: BUILD  env.py
configs/: BUILD  envs.py
database/: BUILD  handler.py  handler_test.py
healthz/: BUILD  routers.py
opticon/: BUILD.bazel  __main__.py  app.py
opticon/configs/: BUILD  envs.py
opticon/database/: BUILD  handler.py  handler_test.py
opticon/healthz/: BUILD
